--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,7 +24,7 @@ body {
 
 #header h1 {
   color: #fff;
-  font-size: 3em;
+  font-size: 5em;
   font-weight: normal;
   font-family: "Satisfy", cursive;
   text-align: center;
@@ -83,7 +83,24 @@ p.buttonArea {
 }
 
 .blog_post figure.image {
+  width: 80%;
+  justify-content: center;
   display: grid;
   margin: 0;
   padding: 0;
+}
+
+.blog_post figure.image img {
+  width: 100%;
+  padding: 7px;
+  border: 1px solid #fff;
+}
+
+figcaption {
+  background: #fff;
+  font-family: "Gloria Hallelujah", cursive;
+  padding: 5px;
+  text-align: center;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
