stuff and whatnot idk

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -23,7 +23,7 @@ body {
 #header {
   color: #fff;
   padding: 10px;
-  margin: 10px;
+  margin: 10px 10px 0 10px;
   text-align: center;
   background: linear-gradient(90deg, var(--light-mint), var(--dark-blue));
   border-top-left-radius: 10px;
@@ -76,14 +76,15 @@ h6 {
 }
 
 #main {
+  background: #fff;
   display: grid;
   line-height: 1.5em;
   grid-template-columns: 1fr;
-  margin: 10px 10px 0 10px;
+  margin: 0 10px 0 10px;
+  padding: 0 20px 0 20px;
 }
 
 .App {
-  background: #fff;
   padding: 10px;
 }
 
