--- a/src/css/index.css
+++ b/src/css/index.css
@@ -81,7 +81,7 @@ h6 {
   line-height: 1.5em;
   grid-template-columns: 1fr;
   margin: 0 10px 0 10px;
-  padding: 0 20px 0 20px;
+  padding: 20px;
 }
 
 .App {
